Basic content for map

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
 	
+    <!--    // LEAFLET MarkerCluster CSS-->
+    <link rel="stylesheet" type='text/css' href="lib/leaflet-0.7.3/leaflet..css" />
 	
+	<!--    // LEAFLET MarkerCluster CSS-->
+    <link rel="stylesheet" type='text/css' href="lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.css" />
+	
+	<style>
+		
+	</style>
 </head>
 <body>
 
@@ -20,7 +28,7 @@
 <!--    <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>-->
     <script type="text/javascript" src="lib/leaflet-0.7.3/leaflet.js"></script>
     <!--    // LEAFLET MarkerCluster 0.4.0 -->
-    <script type="text/javascript" src="lib/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+    <script type="text/javascript" src="lib/leaflet.markercluster-0.4.0/dist/leaflet.markercluster.js"></script>
 	
     <!--    // MAP.JS -->
     <script type="text/javascript" src="js/map.js"></script>
