added GeoJSON CSS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <meta charset="UTF-8">
 	
     <!--    // LEAFLET MarkerCluster CSS-->
-    <link rel="stylesheet" type='text/css' href="lib/leaflet-0.7.3/leaflet..css" />
+    <link rel="stylesheet" type='text/css' href="lib/leaflet-0.7.3/leaflet.css" />
 	
 	<!--    // LEAFLET MarkerCluster CSS-->
     <link rel="stylesheet" type='text/css' href="lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" type='text/css' href="lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.default.css" />
 	
 	<style>
-		
+		#map {
+			height: 400px;
+			width: 600px;
+		}
 	</style>
 </head>
 <body>
@@ -29,7 +33,8 @@
     <script type="text/javascript" src="lib/leaflet-0.7.3/leaflet.js"></script>
     <!--    // LEAFLET MarkerCluster 0.4.0 -->
     <script type="text/javascript" src="lib/leaflet.markercluster-0.4.0/dist/leaflet.markercluster.js"></script>
-	
+	<!--    // GeoJSON.CSS -->
+	<script type="text/javascript" src="lib/Leaflet.geojsonCSS-master/leaflet.geojsoncss.js"></script>
     <!--    // MAP.JS -->
     <script type="text/javascript" src="js/map.js"></script>
 	
