Fixed path issues (case sensitivity in Linux). Pedro Silva

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta charset="UTF-8">
 	
     <!--    // LEAFLET MarkerCluster CSS-->
-    <link rel="stylesheet" type='text/css' href="lib/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" type='text/css' href="./lib/leaflet-0.7.3/leaflet.css" />
 	
 	<!--    // LEAFLET MarkerCluster CSS-->
-    <link rel="stylesheet" type='text/css' href="lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.css" />
-    <link rel="stylesheet" type='text/css' href="lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.default.css" />
+    <link rel="stylesheet" type='text/css' href="./lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.css" />
+    <link rel="stylesheet" type='text/css' href="./lib/leaflet.markercluster-0.4.0/dist/MarkerCluster.Default.css" />
 	
 	<style>
 		#map {
@@ -30,13 +30,13 @@
 
     <!--    // LEAFLET.JS 0.7.3 -->
 <!--    <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>-->
-    <script type="text/javascript" src="lib/leaflet-0.7.3/leaflet.js"></script>
+    <script type="text/javascript" src="./lib/leaflet-0.7.3/leaflet.js"></script>
     <!--    // LEAFLET MarkerCluster 0.4.0 -->
-    <script type="text/javascript" src="lib/leaflet.markercluster-0.4.0/dist/leaflet.markercluster.js"></script>
+    <script type="text/javascript" src="./lib/leaflet.markercluster-0.4.0/dist/leaflet.markercluster.js"></script>
 	<!--    // GeoJSON.CSS -->
-	<script type="text/javascript" src="lib/Leaflet.geojsonCSS-master/leaflet.geojsoncss.js"></script>
+	<script type="text/javascript" src="./lib/leaflet.geojsonCSS-master/leaflet.geojsoncss.js"></script>
     <!--    // MAP.JS -->
-    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="./js/map.js"></script>
 	
 </body>
 </html>
